# unix-ipc

./: Cargo.toml  Makefile  README.md
.github/workflows/: rustfmt.yml
examples/: proc.rs  simple.rs
src/: bootstrap.rs  lib.rs  raw_channel.rs  serde.rs  typed_channel.rs
